\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{NEWS}
\title{glmmADMB News}
\encoding{UTF-8}

\section{Changes in version 0.7.2.12}{
\itemize{
  \item added citation info
  \item MCMC results transformed automatically (but *not* correlation
  parameters or random effects; the function warns of this)
  \item fixed buglet with empty fixed formula
  \item drop1() works
  \item fixed tiny glitch in glmmADMB model printing (alpha printed even
  if not relevant)
  \item now uses results from .bar file for greater precision in fixed
  effects (mostly useful for cross-package comparisons)
  \item step, stepAIC **DO NOT WORK**; added masking functions
  \item fixed MacOS X.5 detection code (throws warning)
}
}

\section{Changes in version 0.7.2.9}{
\itemize{
  \item  version bump, new version of saved OwlModels
  \item added df.residuals and model.frame methods, car::Anova now works
  \item added car, lme4.0 to Suggests:
  \item vignette tweaks/additions
}
}

\section{Changes in version 0.7.2.8}{
\itemize{
  \item  added information to vignette about parameter conversions from MCMC to original scales
}
}

\section{Changes in version 0.7.2.7}{
\itemize{
  \item anova() is a little more flexible, tiny format changes
  \item removed dat_write (use version from R2admb)
}
}

\section{Changes in version 0.7.2.6}{
\itemize{
  \item fix scaling of RE standard deviations; add scale option to ranef
}
}

\section{Changes in version 0.7.2.5}{
\itemize{
  \item new binaries (ADMB r229)
  \item R calculation of phi, pre-transformation of fixed effect parameters
}
}

\section{Changes in version 0.7.2.4}{
 \itemize{
   \item Bug fixes in sys.result handling
   \item Retrieve and document information about orthogonalized
   fixed-effect parameters
   \item re-instituted informative error message for non-factor grouping
   variables
   \item added maxphase (-maxph) to admbControl
   \item further robustification of TPL file
   \item documentation cleanup/improvement
 }
}