@@ -1,6 +1,0 @@
-ranef.glmm.admb <- function(object, sd=FALSE, ...)
-{
-  out <- if(sd) object$sd_U else object$U
-
-  return(out)
-}
